--- a/HalaanTask/Podfile
+++ b/HalaanTask/Podfile
@@ -13,10 +13,16 @@ target 'HalaanTask' do
   target 'HalaanTaskTests' do
     inherit! :search_paths
     # Pods for testing
+  pod 'HalaanTaskEntity', :path => '../HalaanEntities'
+  pod 'HalaanTaskPresentation', :path => '../HalaanTaskPresentation'
+  pod 'HalaanTaskBussiness', :path => '../HalaanTaskBussiness'
   end
 
   target 'HalaanTaskUITests' do
     # Pods for testing
+  pod 'HalaanTaskEntity', :path => '../HalaanEntities'
+  pod 'HalaanTaskPresentation', :path => '../HalaanTaskPresentation'
+  pod 'HalaanTaskBussiness', :path => '../HalaanTaskBussiness'
   end
 
 end
